--- a/productdetail.html
+++ b/productdetail.html
@@ -6,11 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title></title>
-    <script type="module" crossorigin src="/coffee/assets/main-CbJi8C3r.js"></script>
-    <link rel="stylesheet" crossorigin href="/coffee/assets/main-DLrWcKz-.css">
+    <script type="module" crossorigin src="/coffee/assets/main-DjBhQ3_O.js"></script>
+    <link rel="stylesheet" crossorigin href="/coffee/assets/main-BpJju9sr.css">
   </head>
 
-<body id="top">
+<body id="top" class="productdetail">
   <!-- Header：固定在最上方 -->
 <header class="bg-primary-800">
   <div class="container">
@@ -97,10 +97,10 @@
     </ul>
   </nav>
 </div>
-    <main class="container">
+    <main class="container ">
       <section class="py-40 ">
         <!--麵包屑導覽-->
-        <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb" class="mb-40 d-flex flex-row flex-nowrap overflow-x-auto">
+        <nav class="mb-40 d-flex flex-row flex-nowrap overflow-x-auto pc-page">
           <ol class="breadcrumb me-auto mb-lg-0 text-primary-50 ">
             <li class="breadcrumb-item">
               <a class="nav-link" aria-current="page" href="products.html">線上商店</a>
@@ -120,8 +120,8 @@
 
           <div class="col-md-5 col-12">
             <div class="mb-40">
-              <h1 class="h2 text-primary-950 mb-16">祕魯 薇拉瑞卡 安迪亞斯莊園</h1>
-              <p class="h2 text-primary-950 mb-16 me-8">NT$280</p>
+              <h1 class="productdetail-title text-primary-950 mb-16 ">祕魯 薇拉瑞卡 安迪亞斯莊園</h1>
+              <p class="productdetail-title text-primary-950 mb-16 me-8">NT$280</p>
             </div>
 
             <div class="mb-40 paragraph-medium">
@@ -154,7 +154,7 @@
             </div>
 
             <div class="mb-40">
-              <p class="mb-8 label-large text-primary-700">規格</p>
+              <p class="mb-8 label-large text-primary-700 amount">規格</p>
               <div class="d-flex flex-wrap gap-8 mb-8">
                 <button type="button" class="btn4">原豆0.25磅</button>
                 <button type="button" class="btn4">原豆0.5磅</button>
@@ -163,21 +163,26 @@
             </div>
 
             <div class="mb-40">
-              <p class="mb-8 label-large text-primary-700">數量</p>
-              <div class="qty-pill" data-min="1" data-step="1">
+              <p class="mb-8 label-large text-primary-700 amount">數量</p>
+              <div class="qty-pill" data-min="1" data-step="1" data-max="99">
                 <button type="button" class="qty-btn minus" aria-label="減少" title="減少">−</button>
-                <output class="qty-value" id="qty">1</output>
+                <output class="qty-value" id="qty" aria-live="polite" aria-atomic="true">1</output>
                 <button type="button" class="qty-btn plus" aria-label="增加" title="增加">＋</button>
               </div>
             </div>
 
             <div class="row align-items-center g-3 w-100">
               <div class="col-10 ">
-                <button class="btn1 btn btn-brown btn-lg rounded-pill w-100 text-nowrap">加入購物車</button>
+                <button class="btn5 paragraph-large ls-2 d-inline-block rounded-pill w-100 ">加入購物車</button>
               </div>
 
               <div class="col-2 d-flex justify-content-center">
-                <button class="heart-btn" aria-label="加入收藏" aria-pressed="false"></button>
+                <!-- 隱藏的 checkbox（記得 id 要唯一） -->
+                <input type="checkbox" id="fav-01" class="heart-check" />
+                <!-- 視覺按鈕：點這個就會勾選/取消 checkbox -->
+                <label for="fav-01" class="heart-btn">
+                  <span class="visually-hidden">加入收藏</span>
+                </label>
               </div>
 
             </div>
@@ -187,7 +192,7 @@
       </section>
 
       <!--沖煮資訊-->
-      <section class="py-64">
+      <section class="brew-py">
         <div class="new">
           <p class="heading-small ls-2 text-accent-300 mb-12">Brewing Information</p>
           <div class="title d-flex align-items-center mb-24 mb-md-40">
@@ -196,36 +201,40 @@
           </div>
         </div>
 
-        <div class="row row-cols-2 row-cols-md-5 g-4 text-center">
+        <div class="row row-cols-1 row-cols-md-5 g-4 text-md-center brew-facts">
 
-          <div class="col col-12">
-            <img src="/coffee/images/productdetail/water.png" alt="water" class="mb-12">
-            <h4 class="h6" mb-4>水量</h4>
-            <p>300 cc</p>
+          <div class="col ">
+
+
+            <img src="/coffee/images/productdetail/water.png" alt="water" class="mb-16">
+
+
+            <h4 class="brew-title text-primary-700 mb-8">水量</h4>
+            <p class="brew-info text-primary-950">300 cc</p>
           </div>
 
           <div class="col col-12">
-            <img src="/coffee/images/productdetail/coffee_weight.png" alt="coffee_weight" class="mb-12">
-            <h4 class="h6" mb-4>咖啡量</h4>
-            <p>20 g</p>
+            <img src="/coffee/images/productdetail/coffee_weight.png" alt="coffee_weight" class="mb-16">
+            <h4 class="brew-title text-primary-700 mb-8">咖啡量</h4>
+            <p class="brew-info text-primary-950">20 g</p>
           </div>
 
           <div class="col col-12">
-            <img src="/coffee/images/productdetail/time.png" alt="time" class="mb-12">
-            <h4 class="h6" mb-4>沖煮時間</h4>
-            <p>100 秒</p>
+            <img src="/coffee/images/productdetail/time.png" alt="time" class="mb-16">
+            <h4 class="brew-title text-primary-700 mb-8">沖煮時間</h4>
+            <p class="brew-info text-primary-950">100 秒</p>
           </div>
 
           <div class="col col-12">
-            <img src="/coffee/images/productdetail/temper.png" alt="temper" class="mb-12">
-            <h4 class="h6" mb-4>注水溫度</h4>
-            <p>92°C</p>
+            <img src="/coffee/images/productdetail/temper.png" alt="temper" class="mb-16">
+            <h4 class="brew-title text-primary-700 mb-8">注水溫度</h4>
+            <p class="brew-info text-primary-950">92°C</p>
           </div>
 
           <div class="col col-12">
-            <img src="/coffee/images/productdetail/steaming.png" alt="steaming" class="mb-12">
-            <h4 class="h6" mb-4>悶蒸</h4>
-            <p>30 秒</p>
+            <img src="/coffee/images/productdetail/steaming.png" alt="steaming" class="mb-16">
+            <h4 class="brew-title text-primary-700 mb-8">悶蒸</h4>
+            <p class="brew-info text-primary-950">30 秒</p>
           </div>
         </div>
       </section>
@@ -241,40 +250,25 @@
         </div>
 
         <!-- 卡片 Bootsrap Grid cards -->
-        <div
-          class="row row-cols-2 row-cols-md-3 gx-md-64 gy-md-40 gx-16 gy-20 flex-nowrap overflow-hidden overflow-x-auto">
+        <div class="row row-cols-md-3 gx-md-64 gx-20 flex-nowrap overflow-hidden overflow-x-auto">
           <!-- whiteCoffeeCup -->
           <div class="col-md w-256">
             <a href="#" class="text-decoration-none products-link">
               <div class="card">
                 <!-- 商品照與底色 -->
-                <div
-                  class="w-100 ratio ratio-1x1 bg-primary-50 position-relative">
+                <div class="w-100 ratio ratio-1x1 bg-primary-50 position-relative">
                   <div class="heartArea">
                     <label for="blackCoffeeBean" class="products-label">
-                      <input
-                        type="checkbox"
-                        id="blackCoffeeBean"
-                        class="productsHeart" />
+                      <input type="checkbox" id="blackCoffeeBean" class="productsHeart" />
                       <!-- 實心愛心 -->
-                      <svg
-                        width="24"
-                        height="24"
-                        fill="none"
-                        viewBox="0 0 24 24"
-                        xmlns="http://www.w3.org/2000/svg"
+                      <svg width="24" height="24" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
                         class="products-heartFilled">
                         <path
                           d="m12.82 5.58-.82.822-.824-.824a5.375 5.375 0 1 0-7.601 7.602l7.895 7.895a.75.75 0 0 0 1.06 0l7.902-7.897a5.376 5.376 0 0 0-.001-7.599 5.38 5.38 0 0 0-7.611 0Z"
                           fill="#5B4530" />
                       </svg>
                       <!-- 空心愛心 -->
-                      <svg
-                        width="24"
-                        height="24"
-                        fill="none"
-                        viewBox="0 0 24 24"
-                        xmlns="http://www.w3.org/2000/svg"
+                      <svg width="24" height="24" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
                         class="products-heartOutlined">
                         <path
                           d="m12.82 5.58-.82.822-.824-.824a5.375 5.375 0 1 0-7.601 7.602l7.895 7.895a.75.75 0 0 0 1.06 0l7.902-7.897a5.376 5.376 0 0 0-.001-7.599 5.38 5.38 0 0 0-7.611 0Zm6.548 6.54L12 19.485 4.635 12.12a3.875 3.875 0 1 1 5.48-5.48l1.358 1.357a.75.75 0 0 0 1.073-.012L13.88 6.64a3.88 3.88 0 0 1 5.487 5.48Z"
@@ -283,22 +277,18 @@
                     </label>
                   </div>
 
-                  <img
-                    src="/coffee/images/productsImg/blackCoffeeBean.png"
+                  <img src="/coffee/images/productsImg/blackCoffeeBean.png"
                     class="w-100 object-fit-cover position-absolute top-50 start-50 translate-middle pe-none"
                     alt="..." />
                 </div>
                 <div class="card-body products-bg text-center py-20 px-0">
-                  <h5
-                    class="card-title label-small products-label-md-small text-primary-700 mb-8">
+                  <h5 class="card-title label-small products-label-md-small text-primary-700 mb-8">
                     經典咖啡豆 | 中度烘焙
                   </h5>
-                  <p
-                    class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">
+                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">
                     冬雪藏梅 配方
                   </p>
-                  <p
-                    class="card-text label-medium products-label-md-large text-primary-950">
+                  <p class="card-text label-medium products-label-md-large text-primary-950">
                     $200~$600
                   </p>
                 </div>
@@ -309,33 +299,19 @@
             <a href="#" class="text-decoration-none products-link">
               <div class="card">
                 <!-- 商品照與底色 -->
-                <div
-                  class="w-100 ratio ratio-1x1 bg-primary-50 position-relative">
+                <div class="w-100 ratio ratio-1x1 bg-primary-50 position-relative">
                   <div class="heartArea">
                     <label for="brownCoffeeBean" class="products-label">
-                      <input
-                        type="checkbox"
-                        id="brownCoffeeBean"
-                        class="productsHeart" />
+                      <input type="checkbox" id="brownCoffeeBean" class="productsHeart" />
                       <!-- 實心愛心 -->
-                      <svg
-                        width="24"
-                        height="24"
-                        fill="none"
-                        viewBox="0 0 24 24"
-                        xmlns="http://www.w3.org/2000/svg"
+                      <svg width="24" height="24" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
                         class="products-heartFilled">
                         <path
                           d="m12.82 5.58-.82.822-.824-.824a5.375 5.375 0 1 0-7.601 7.602l7.895 7.895a.75.75 0 0 0 1.06 0l7.902-7.897a5.376 5.376 0 0 0-.001-7.599 5.38 5.38 0 0 0-7.611 0Z"
                           fill="#5B4530" />
                       </svg>
                       <!-- 空心愛心 -->
-                      <svg
-                        width="24"
-                        height="24"
-                        fill="none"
-                        viewBox="0 0 24 24"
-                        xmlns="http://www.w3.org/2000/svg"
+                      <svg width="24" height="24" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
                         class="products-heartOutlined">
                         <path
                           d="m12.82 5.58-.82.822-.824-.824a5.375 5.375 0 1 0-7.601 7.602l7.895 7.895a.75.75 0 0 0 1.06 0l7.902-7.897a5.376 5.376 0 0 0-.001-7.599 5.38 5.38 0 0 0-7.611 0Zm6.548 6.54L12 19.485 4.635 12.12a3.875 3.875 0 1 1 5.48-5.48l1.358 1.357a.75.75 0 0 0 1.073-.012L13.88 6.64a3.88 3.88 0 0 1 5.487 5.48Z"
@@ -344,22 +320,18 @@
                     </label>
                   </div>
 
-                  <img
-                    src="/coffee/images/productsImg/brownCoffeeBean.png"
+                  <img src="/coffee/images/productsImg/brownCoffeeBean.png"
                     class="w-100 object-fit-cover position-absolute top-50 start-50 translate-middle pe-none"
                     alt="..." />
                 </div>
                 <div class="card-body products-bg text-center py-20 px-0">
-                  <h5
-                    class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">
+                  <h5 class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">
                     經典咖啡豆 | 深度烘焙
                   </h5>
-                  <p
-                    class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">
+                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">
                     衣索比亞 谷吉 赫瑪聯合處理場
                   </p>
-                  <p
-                    class="card-text label-medium products-label-md-large text-primary-950">
+                  <p class="card-text label-medium products-label-md-large text-primary-950">
                     $280~$600
                   </p>
                 </div>
@@ -370,33 +342,19 @@
             <a href="#" class="text-decoration-none products-link">
               <div class="card">
                 <!-- 商品照與底色 -->
-                <div
-                  class="w-100 ratio ratio-1x1 bg-primary-50 position-relative">
+                <div class="w-100 ratio ratio-1x1 bg-primary-50 position-relative">
                   <div class="heartArea">
                     <label for="redCoffeeBean" class="products-label">
-                      <input
-                        type="checkbox"
-                        id="redCoffeeBean"
-                        class="productsHeart" />
+                      <input type="checkbox" id="redCoffeeBean" class="productsHeart" />
                       <!-- 實心愛心 -->
-                      <svg
-                        width="24"
-                        height="24"
-                        fill="none"
-                        viewBox="0 0 24 24"
-                        xmlns="http://www.w3.org/2000/svg"
+                      <svg width="24" height="24" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
                         class="products-heartFilled">
                         <path
                           d="m12.82 5.58-.82.822-.824-.824a5.375 5.375 0 1 0-7.601 7.602l7.895 7.895a.75.75 0 0 0 1.06 0l7.902-7.897a5.376 5.376 0 0 0-.001-7.599 5.38 5.38 0 0 0-7.611 0Z"
                           fill="#5B4530" />
                       </svg>
                       <!-- 空心愛心 -->
-                      <svg
-                        width="24"
-                        height="24"
-                        fill="none"
-                        viewBox="0 0 24 24"
-                        xmlns="http://www.w3.org/2000/svg"
+                      <svg width="24" height="24" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
                         class="products-heartOutlined">
                         <path
                           d="m12.82 5.58-.82.822-.824-.824a5.375 5.375 0 1 0-7.601 7.602l7.895 7.895a.75.75 0 0 0 1.06 0l7.902-7.897a5.376 5.376 0 0 0-.001-7.599 5.38 5.38 0 0 0-7.611 0Zm6.548 6.54L12 19.485 4.635 12.12a3.875 3.875 0 1 1 5.48-5.48l1.358 1.357a.75.75 0 0 0 1.073-.012L13.88 6.64a3.88 3.88 0 0 1 5.487 5.48Z"
@@ -405,22 +363,18 @@
                     </label>
                   </div>
 
-                  <img
-                    src="/coffee/images/productsImg/redCoffeeBean.png"
+                  <img src="/coffee/images/productsImg/redCoffeeBean.png"
                     class="w-100 object-fit-cover position-absolute top-50 start-50 translate-middle pe-none"
                     alt="..." />
                 </div>
                 <div class="card-body products-bg text-center py-20 px-0">
-                  <h5
-                    class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">
+                  <h5 class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">
                     經典咖啡豆 | 深度烘焙
                   </h5>
-                  <p
-                    class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">
+                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">
                     衣索比亞 西達摩 蕾羅莎處理廠
                   </p>
-                  <p
-                    class="card-text label-medium products-label-md-large text-primary-950">
+                  <p class="card-text label-medium products-label-md-large text-primary-950">
                     $350~$600
                   </p>
                 </div>
@@ -428,7 +382,6 @@
             </a>
           </div>
         </div>
-
 
 
 
@@ -499,7 +452,7 @@
       if (scroller) scroller.scrollTo({ top: 0, behavior });
     });
   });
-</script>
+</script>
         <script>
     let pagetilte = "羊蹄咖啡";
     const url = window.location.pathname;
@@ -530,6 +483,37 @@
 </script>
 
  
+        <script>
+(() => {
+  const clamp = (n, min, max) => Math.max(min, Math.min(max, n));
+
+  document.querySelectorAll('.qty-pill').forEach(wrap => {
+    const out   = wrap.querySelector('.qty-value');
+    const minus = wrap.querySelector('.minus');
+    const plus  = wrap.querySelector('.plus');
+
+    const step = parseFloat(wrap.dataset.step || '1');
+    const min  = wrap.dataset.min !== undefined ? parseFloat(wrap.dataset.min) : -Infinity;
+    const max  = wrap.dataset.max !== undefined ? parseFloat(wrap.dataset.max) :  Infinity;
+
+    const getVal = () => parseFloat(out.textContent || out.value || '0');
+    const setVal = v => {
+      const val = clamp(v, min, max);
+      out.textContent = val;
+      out.value = val;                 // 若程式要讀 output.value 也拿得到
+      minus.disabled = val <= min;
+      plus.disabled  = val >= max;
+    };
+
+    // 初始化
+    setVal(getVal());
+
+    minus.addEventListener('click', () => setVal(getVal() - step));
+    plus .addEventListener('click', () => setVal(getVal() + step));
+  });
+})();
+</script>
+
 </body>
 
 </html>
